--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,10 @@
         <lib.assertj-core.version>3.14.0</lib.assertj-core.version>
         <lib.junit.version>4.13</lib.junit.version>
         <lib.mockito-all.version>1.10.19</lib.mockito-all.version>
+        <sonar.projectKey>maxiko_qualinsight-plugins-sonarqube-badges</sonar.projectKey>
+        <sonar.organization>maxiko</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+        <sonar.login>89ec154cff9f528381ebf95f243e83264c302f63</sonar.login>
     </properties>
     <dependencies>
         <dependency>
@@ -182,6 +186,10 @@
                     <pluginDescription/>
                     <pluginTermsConditionsUrl>https://www.gnu.org/licenses/lgpl-3.0.txt</pluginTermsConditionsUrl>
                     <pluginUrl>https://github.com/QualInsight/qualinsight-plugins-sonarqube-badges/</pluginUrl>
+                    <excludes>
+                        <exclude>*.svg</exclude>
+                        <exclude>LICENSE</exclude>
+                    </excludes>
                 </configuration>
             </plugin>
         </plugins>
