--- a/pom.xml
+++ b/pom.xml
@@ -174,8 +174,12 @@
                 <artifactId>license-maven-plugin</artifactId>
                 <configuration>
                     <excludes>
-                        <exclude>*.svg</exclude>
-                        <exclude>LICENSE</exclude>
+                        <exclude>src/test/resources/**</exclude>
+                        <exclude>src/main/resources/**</exclude>
+                        <exclude>images/**</exclude>
+                        <exclude>nbproject/**</exclude>
+                        <exclude>**/LICENSE</exclude>
+                        <exclude>**/pom.xml</exclude>
                     </excludes>
                 </configuration>
             </plugin>
