--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     </parent>
     <groupId>com.qualinsight.plugins.sonarqube</groupId>
     <artifactId>qualinsight-plugins-sonarqube-badges</artifactId>
-    <version>3.0.2-SNAPSHOT</version>
+    <version>7.9.2-SNAPSHOT</version>
     <packaging>sonar-plugin</packaging>
     <name>SVG Badges Plugin</name>
     <description>This plugin adds a webservice to SonarQube that allows the retrieval of different types of badges that
@@ -57,8 +57,8 @@
         <!-- Plugin versions -->
         <plugin.sonar-packaging-maven-plugin.version>1.15</plugin.sonar-packaging-maven-plugin.version>
         <!-- Libraries versions -->
-        <lib.sonar-plugin-api.version>8.0</lib.sonar-plugin-api.version>
-        <lib.sonar-ws.version>8.0</lib.sonar-ws.version>
+        <lib.sonar-plugin-api.version>7.9.2</lib.sonar-plugin-api.version>
+        <lib.sonar-ws.version>7.9.2</lib.sonar-ws.version>
         <lib.httpclient.version>4.5.10</lib.httpclient.version>
         <lib.slf4j-api.version>1.7.30</lib.slf4j-api.version>
         <lib.logback-classic.version>1.2.3</lib.logback-classic.version>
@@ -81,11 +81,12 @@
             <version>${lib.sonar-plugin-api.version}</version>
             <scope>provided</scope>
         </dependency>
+        <!-- Uncomment if you have version > 8.0
         <dependency>
             <groupId>org.sonarsource.sonarqube</groupId>
             <artifactId>sonar-plugin-api-impl</artifactId>
             <version>${lib.sonar-plugin-api.version}</version>
-        </dependency>
+        </dependency>-->
 
         <dependency>
             <groupId>org.sonarsource.sonarqube</groupId>
