--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -20,9 +20,7 @@ jobs:
       run: mvn -B package --file pom.xml
 
     - name: Publish to GitHub Packages Apache Maven
-      run: mvn deploy
-      env:
-        GITHUB_TOKEN: 521dc2a5ffcb615c92f5a0a74f1b9f37c0e1b494
+      run: mvn -B deploy -Dregistry=https://maven.pkg.github.com/maxiko -Dtoken=521dc2a5ffcb615c92f5a0a74f1b9f37c0e1b494
 
     - name: Static Code Anaylizis
-      run: mvn clean sonar:sonar
+      run: mvn -B clean sonar:sonar
