--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,14 @@
         <tag>HEAD</tag>
     </scm>
 
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub maxiko Apache Maven Packages</name>
+            <url>https://maven.pkg.github.com/maxiko</url>
+        </repository>
+    </distributionManagement>
+
     <properties>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <!-- License properties -->
