--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,7 +26,7 @@ jobs:
 #        echo "<settings><servers><server><id>github</id><username>maxiko</username><password>${GITHUB_TOKEN}</password></server></servers></settings>" > ~/.m2/settings.xml
 #        mvn -B deploy
 
-    - name: Static Code Anaylizis
-      env:
-        GITHUB_TOKEN: ${{secrets.GITHUB_DEPLOY_TOKEN}}
-      run: mvn -B clean sonar:sonar -Dsonar.login=${{secrets.SONAR_ANALYZE_TOKEN}}
+#    - name: Static Code Anaylizis
+#      env:
+#        GITHUB_TOKEN: ${{secrets.GITHUB_DEPLOY_TOKEN}}
+#      run: mvn -B clean sonar:sonar -Dsonar.login=${{secrets.SONAR_ANALYZE_TOKEN}}
