--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     </parent>
     <groupId>com.qualinsight.plugins.sonarqube</groupId>
     <artifactId>qualinsight-plugins-sonarqube-badges</artifactId>
-    <version>7.9.2-SNAPSHOT</version>
+    <version>7.9.2</version>
     <packaging>sonar-plugin</packaging>
     <name>SVG Badges Plugin</name>
     <description>This plugin adds a webservice to SonarQube that allows the retrieval of different types of badges that
